testsuite/tests/parser/should_fail/pfail034.alan
hello() : proc
{
  foo = (1 + 3;
}
