testsuite/tests/parser/should_fail/pfail034.stderr
pfail034.alan:3:15: Error: Parse error on input `;'
	Probably missing `)'

